--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         }
         .hero-bg {
             /* User to replace with their actual hero image: e.g., images/hero-background.jpg */
-            background-image: url('https://placehold.co/1600x900/6366f1/e0e7ff?text=Regional+History+Hero+Image');
+            background-image: url('images/hero-background.jpg'); /* MODIFIED - User needs to provide this image */
             background-size: cover;
             background-position: center;
         }
@@ -57,7 +57,7 @@
             background: #555;
         }
     </style>
-    <link rel="icon" href="images/favicon.jpg" type="image/jpeg">
+    <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
 <body class="bg-slate-50 text-slate-800 antialiased">
 
@@ -105,7 +105,7 @@
             </div>
             <div class="grid md:grid-cols-2 gap-8 md:gap-12 items-center">
                 <div>
-                    <img src="https://placehold.co/600x400/a5b4fc/312e81?text=About+Our+Channel" alt="Illustration about Regional History Summaries' mission" class="rounded-lg shadow-xl w-full" onerror="this.onerror=null;this.src='https://placehold.co/600x400/cccccc/969696?text=Image+Not+Found';">
+                    <img src="images/about-us.jpg" alt="Illustration about Regional History Summaries' mission" class="rounded-lg shadow-xl w-full" onerror="this.onerror=null;this.src='https://placehold.co/600x400/a5b4fc/312e81?text=About+Image+Missing';">
                 </div>
                 <div class="text-slate-700 space-y-6">
                     <h3 class="text-2xl font-semibold text-indigo-600">What to Expect</h3>
@@ -141,7 +141,7 @@
             <div class="grid md:grid-cols-2 lg:grid-cols-2 gap-8">
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
                     <a href="https://www.youtube.com/watch?v=xgVCwmam-ss" target="_blank" rel="noopener noreferrer">
-                        <img src="images/uk-history-thumbnail.jpg" alt="UK History: A Deep Dive Thumbnail" class="w-full video-thumbnail" onerror="this.onerror=null;this.src='https://placehold.co/600x338/7c3aed/ffffff?text=UK+History+Video';">
+                        <img src="images/uk-history-thumbnail.jpg" alt="UK History: A Deep Dive Thumbnail" class="w-full video-thumbnail" onerror="this.onerror=null;this.src='https://placehold.co/600x338/7c3aed/ffffff?text=UK+History+Video+Missing';">
                     </a>
                     <div class="p-6">
                         <h3 class="text-xl font-semibold text-indigo-700 mb-2">
@@ -157,7 +157,7 @@
 
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
                     <a href="https://youtu.be/LWkAIZ-FD54" target="_blank" rel="noopener noreferrer">
-                        <img src="images/us-history-thumbnail.jpg" alt="US History: America's Journey Thumbnail" class="w-full video-thumbnail" onerror="this.onerror=null;this.src='https://placehold.co/600x338/db2777/ffffff?text=US+History+Video';">
+                        <img src="images/us-history-thumbnail.jpg" alt="US History: America's Journey Thumbnail" class="w-full video-thumbnail" onerror="this.onerror=null;this.src='https://placehold.co/600x338/db2777/ffffff?text=US+History+Video+Missing';">
                     </a>
                     <div class="p-6">
                         <h3 class="text-xl font-semibold text-indigo-700 mb-2">
@@ -182,43 +182,43 @@
             </div>
             <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4 md:gap-6">
                 <div class="group relative rounded-lg overflow-hidden shadow-lg">
-                    <img src="https://placehold.co/400x300/ef4444/ffffff?text=China" alt="Map or iconic image of China" class="w-full region-image transform group-hover:scale-110 transition-transform duration-500" onerror="this.onerror=null;this.src='https://placehold.co/400x300/cccccc/969696?text=Image+Not+Found';">
+                    <img src="images/region-china.jpg" alt="Map or iconic image of China" class="w-full region-image transform group-hover:scale-110 transition-transform duration-500" onerror="this.onerror=null;this.src='https://placehold.co/400x300/ef4444/ffffff?text=China+Image+Missing';">
                     <div class="absolute inset-0 bg-black/40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                         <h3 class="text-white text-xl font-semibold">History of China</h3>
                     </div>
                 </div>
                 <div class="group relative rounded-lg overflow-hidden shadow-lg">
-                     <img src="https://placehold.co/400x300/3b82f6/ffffff?text=USA" alt="Map or iconic image of the USA" class="w-full region-image transform group-hover:scale-110 transition-transform duration-500" onerror="this.onerror=null;this.src='https://placehold.co/400x300/cccccc/969696?text=Image+Not+Found';">
+                     <img src="images/region-us.jpg" alt="Map or iconic image of the USA" class="w-full region-image transform group-hover:scale-110 transition-transform duration-500" onerror="this.onerror=null;this.src='https://placehold.co/400x300/3b82f6/ffffff?text=USA+Image+Missing';">
                     <div class="absolute inset-0 bg-black/40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                         <h3 class="text-white text-xl font-semibold">History of the US</h3>
                     </div>
                 </div>
                 <div class="group relative rounded-lg overflow-hidden shadow-lg">
-                     <img src="https://placehold.co/400x300/10b981/ffffff?text=France" alt="Map or iconic image of France" class="w-full region-image transform group-hover:scale-110 transition-transform duration-500" onerror="this.onerror=null;this.src='https://placehold.co/400x300/cccccc/969696?text=Image+Not+Found';">
+                     <img src="images/region-france.jpg" alt="Map or iconic image of France" class="w-full region-image transform group-hover:scale-110 transition-transform duration-500" onerror="this.onerror=null;this.src='https://placehold.co/400x300/10b981/ffffff?text=France+Image+Missing';">
                     <div class="absolute inset-0 bg-black/40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                         <h3 class="text-white text-xl font-semibold">History of France</h3>
                     </div>
                 </div>
                 <div class="group relative rounded-lg overflow-hidden shadow-lg">
-                     <img src="https://placehold.co/400x300/8b5cf6/ffffff?text=UK" alt="Map or iconic image of the UK" class="w-full region-image transform group-hover:scale-110 transition-transform duration-500" onerror="this.onerror=null;this.src='https://placehold.co/400x300/cccccc/969696?text=Image+Not+Found';">
+                     <img src="images/region-uk.jpg" alt="Map or iconic image of the UK" class="w-full region-image transform group-hover:scale-110 transition-transform duration-500" onerror="this.onerror=null;this.src='https://placehold.co/400x300/8b5cf6/ffffff?text=UK+Image+Missing';">
                     <div class="absolute inset-0 bg-black/40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                         <h3 class="text-white text-xl font-semibold">History of the UK</h3>
                     </div>
                 </div>
                  <div class="group relative rounded-lg overflow-hidden shadow-lg">
-                     <img src="https://placehold.co/400x300/f97316/ffffff?text=Italy" alt="Map or iconic image of Italy" class="w-full region-image transform group-hover:scale-110 transition-transform duration-500" onerror="this.onerror=null;this.src='https://placehold.co/400x300/cccccc/969696?text=Image+Not+Found';">
+                     <img src="images/region-italy.jpg" alt="Map or iconic image of Italy" class="w-full region-image transform group-hover:scale-110 transition-transform duration-500" onerror="this.onerror=null;this.src='https://placehold.co/400x300/f97316/ffffff?text=Italy+Image+Missing';">
                     <div class="absolute inset-0 bg-black/40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                         <h3 class="text-white text-xl font-semibold">History of Italy</h3>
                     </div>
                 </div>
                 <div class="group relative rounded-lg overflow-hidden shadow-lg">
-                    <img src="https://placehold.co/400x300/059669/ffffff?text=Mexico" alt="Map or iconic image of Mexico" class="w-full region-image transform group-hover:scale-110 transition-transform duration-500" onerror="this.onerror=null;this.src='https://placehold.co/400x300/cccccc/969696?text=Image+Not+Found';">
+                    <img src="images/region-mexico.jpg" alt="Map or iconic image of Mexico" class="w-full region-image transform group-hover:scale-110 transition-transform duration-500" onerror="this.onerror=null;this.src='https://placehold.co/400x300/059669/ffffff?text=Mexico+Image+Missing';">
                     <div class="absolute inset-0 bg-black/40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                         <h3 class="text-white text-xl font-semibold">History of Mexico</h3>
                     </div>
                 </div>
                  <div class="group relative rounded-lg overflow-hidden shadow-lg">
-                     <img src="https://placehold.co/400x300/dc2626/ffffff?text=Canada" alt="Map or iconic image of Canada" class="w-full region-image transform group-hover:scale-110 transition-transform duration-500" onerror="this.onerror=null;this.src='https://placehold.co/400x300/cccccc/969696?text=Image+Not+Found';">
+                     <img src="images/region-canada.jpg" alt="Map or iconic image of Canada" class="w-full region-image transform group-hover:scale-110 transition-transform duration-500" onerror="this.onerror=null;this.src='https://placehold.co/400x300/dc2626/ffffff?text=Canada+Image+Missing';">
                     <div class="absolute inset-0 bg-black/40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                         <h3 class="text-white text-xl font-semibold">History of Canada</h3>
                     </div>
